--- a/static/index.html
+++ b/static/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="icon" href="data:,">
 	<title>Pepega Blog Website</title>
 	<meta charset="UTF-8">
 	<style type="text/css">
@@ -18,8 +17,8 @@
 			font-size: 20px;
 		}
 		input {
- 			background-color: #948aba;
-			color: white;
+ 			background-color: #bdb2e6;
+			color: #000000;
 			font-size: 20px;
 		}
 		h2{
